# Aftersales

./: .gitattributes  .gitignore  After-Sales-Prozess.md  CLAUDE.md  Jira Projekt erstellen.blueprint.json  Loesungsanalyse-After-Sales-Plattform.md
django/backend/: Dockerfile  conftest.py  entrypoint.sh  pyproject.toml
django/backend/apps/audit/: admin.py  models.py  serializers.py  services.py  urls.py  views.py
django/backend/apps/billing/: admin.py  apps.py  middleware.py  models.py  serializers.py  services.py  urls.py  views.py  webhooks.py
django/backend/apps/clients/: admin.py  apps.py  models.py  serializers.py  service_type_urls.py  services.py  signals.py  urls.py  views.py
django/backend/apps/common/: email_backend.py  encryption.py  exceptions.py  models.py  pagination.py  permissions.py  throttling.py
django/backend/apps/emails/: admin.py  models.py  provider_service.py  serializers.py  services.py  tasks.py  urls.py  views.py
django/backend/apps/integrations/: admin.py  config_copy_service.py  encryption.py  models.py  registry.py  serializers.py  services.py  tasks.py  urls.py  views.py
django/backend/apps/nps/: admin.py  apps.py  models.py  serializers.py  services.py  tasks.py  urls.py  views.py
django/backend/apps/tasks/: admin.py  models.py  serializers.py  services.py  tasks.py  urls.py  views.py
django/backend/apps/tenants/: admin.py  models.py  serializers.py  services.py  urls.py  views.py
django/backend/config/: asgi.py  celery.py  urls.py  wsgi.py
django/backend/requirements/: base.txt  local.txt  production.txt  test.txt
(+267 files in other folders)
